# xv6_rust

./: Cargo.toml  README.md
.cargo/: config.toml
src/: layout.ld  main.rs  uart.rs
