[package]
name = "xv6_rust"
authors = ["C. Nobody"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[unstable]
build-std = ["core", "compiler_buitins", "alloc"]
build-std-features = ["compiler_buitins-mem"]

